--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
        <div class="head">
            <h1>My Folio Page</h1>
        </div>
-
-   </section>
-   <section class="second">
-    <div class="sidebar">
+       <div class="nav-bar">
         <ul >
             <li>About</li>
             <li>Contact</li>
@@ -25,9 +22,10 @@
             <li>myBlog</li>
         </ul>
     </div>
-    <div class="other-side">
-        <div class="pic" >
-                <div class="d">  <img src="./img/photo_2022-07-16_09-13-23.jpg" alt="self-image"></div>
+   </section>
+   <section class="second">
+        <div class="pic" > 
+                  <img src="./img/photo_2022-07-16_09-13-23.jpg" alt="self-image">
             <div class="mylist">
                 <ul>
                     <li><b>Name:</b> David Jackson</li>
@@ -40,7 +38,12 @@
                 </ul>
             </div>
         </div>
-        <p>I love the work of God very much, and I also have a great passion for computing so my life is very interesting, 
+   </section>
+   <section class="third">
+    <div class="cad-contain">
+
+        <div class="cad1">
+            <p>I love the work of God very much, and I also have a great passion for computing so my life is very interesting, 
             where ever i go people tend to ask me allot of questions and 
             they do show interest in me, because i am very deligent and ambitious. 
             I have alot about my self that you would want to know. 
@@ -48,7 +51,26 @@
             <a >know more!</a>
         </p>
     </div>
-   </section>
+    <div class="cad2"><p>I love the work of God very much, and I also have a great passion for computing so my life is very interesting, 
+        where ever i go people tend to ask me allot of questions and 
+        they do show interest in me, because i am very deligent and ambitious. 
+        I have alot about my self that you would want to know. 
+        If you are interested click the link to read more about me.
+        <a >know more!</a>
+    </p></div>
+    <div class="cad3"><p>I love the work of God very much, and I also have a great passion for computing so my life is very interesting, 
+        where ever i go people tend to ask me allot of questions and 
+        they do show interest in me, because i am very deligent and ambitious. 
+        I have alot about my self that you would want to know. 
+        If you are interested click the link to read more about me.
+        <a >know more!</a>
+    </p></div>
+</div>
+<div class="wave">
+    <p>I am A Proud Software Developer</p>
+</div>
+</section>
+   
    <section class="footer">
        <div class="1">By: David Jackson</div>
        <div class="handles">
