--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mine.css">
-    <title>My Page</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="img/fontawesome-free-6.2.1-web/css/all.min.css">
+    <title>My folio Page</title>
 </head>
 
 <body >
    <section class="first">
        <div class="head">
-           <h1>My Folio Page</h1>
+           <h1>My</h1>
        </div>
        <div class="nav-bar">
         <ul >
@@ -25,7 +27,7 @@
    </section>
    <section class="second">
         <div class="pic" > 
-                  <img src="./img/photo_2022-07-16_09-13-23.jpg" alt="self-image">
+                  <img src="./img/F720E835-9973-49DF-A212-A5D8C55DA3C0.jpeg" alt="self-image">
             <div class="mylist">
                 <ul>
                     <li><b>Name:</b> David Jackson</li>
@@ -69,16 +71,31 @@
 <div class="wave">
     <p>I am A Proud Software Developer</p>
 </div>
+<div class="project">
+    <div class="p1">
+       @ Remind_me
+    </div>
+    <div class="p1">
+        @quizerCount
+    </div>
+    <div class="p1">
+        @project3
+    </div>
+    <div class="p1">
+        @project 4
+    </div>
+
+</div>
 </section>
    
-   <section class="footer">
-       <div class="1">By: David Jackson</div>
-       <div class="handles">
-           <span>@linkedin</span>
-           <span>@facebook</span>
-           <span>@whatsapp</span>
-           <span>@instagram</span>
-        </div>
-   </section>
+<section class="footer">
+    <div class="handles">
+        <span>@linkedin</span>
+        <span>@facebook</span>
+        <span>@whatsapp</span>
+        <span>@instagram</span>
+    </div>
+</section>
+<div class="f1"><i class="fa-solid fa-copyright"></i> David Jackson</div>
 </body>
 </html>
