--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
        </div>
        <div class="nav-bar">
         <ul >
-            <li>About</li>
-            <li>Contact</li>
-            <li>lifestyle</li>
-            <li>Interest</li>
-            <li>myBlog</li>
+            <li><a href="/pages/about.html">About</a></li>
+            <li><a href="/pages/contact.html">Contact</a></li>
+            <li><a href="/pages/lifestyle.html">lifestyle</a></li>
+            <li><a href="/pages/Interest.html">Interest</a></li>
+            <li><a href= "/pages/blog.html"> myBlog</a></li>
         </ul>
     </div>
    </section>
