addition of bootstrap and code development

--- a/index.html
+++ b/index.html
@@ -6,28 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mine.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="img/fontawesome-free-6.2.1-web/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>My folio Page</title>
 </head>
 
-<body >
+<body  class="container">
    <section class="first">
        <div class="head">
            <h1>My</h1>
-       </div>
-       <div class="nav-bar">
-        <ul >
-            <li><a href="/pages/about.html">About</a></li>
-            <li><a href="/pages/contact.html">Contact</a></li>
-            <li><a href="/pages/lifestyle.html">lifestyle</a></li>
-            <li><a href="/pages/Interest.html">Interest</a></li>
-            <li><a href= "/pages/blog.html"> myBlog</a></li>
-        </ul>
-    </div>
-   </section>
+        </div>
+    </section>
+           <div class="nav-bar">
+               <ul >
+                   <li><a href="/pages/about.html">About</a></li>
+                   <li><a href="/pages/contact.html">Contact</a></li>
+                   <li><a href="/pages/lifestyle.html">lifestyle</a></li>
+                   <li><a href="/pages/Interest.html">Interest</a></li>
+                   <li><a href= "/pages/blog.html"> myBlog</a></li>
+                </ul>
+            </div>
    <section class="second">
         <div class="pic" > 
-                  <img src="./img/F720E835-9973-49DF-A212-A5D8C55DA3C0.jpeg" alt="self-image">
+            <img src="./img/F720E835-9973-49DF-A212-A5D8C55DA3C0.jpeg" alt="self-image">
+        </div>
             <div class="mylist">
                 <ul>
                     <li><b>Name:</b> David Jackson</li>
@@ -39,63 +41,124 @@
                     <li><b>Phone: </b>0557466921</li>
                 </ul>
             </div>
-        </div>
    </section>
    <section class="third">
     <div class="cad-contain">
-
-        <div class="cad1">
-            <p>I love the work of God very much, and I also have a great passion for computing so my life is very interesting, 
-            where ever i go people tend to ask me allot of questions and 
-            they do show interest in me, because i am very deligent and ambitious. 
-            I have alot about my self that you would want to know. 
-            If you are interested click the link to read more about me.
-            <a >know more!</a>
-        </p>
-    </div>
-    <div class="cad2"><p>I love the work of God very much, and I also have a great passion for computing so my life is very interesting, 
-        where ever i go people tend to ask me allot of questions and 
-        they do show interest in me, because i am very deligent and ambitious. 
-        I have alot about my self that you would want to know. 
-        If you are interested click the link to read more about me.
-        <a >know more!</a>
-    </p></div>
-    <div class="cad3"><p>I love the work of God very much, and I also have a great passion for computing so my life is very interesting, 
-        where ever i go people tend to ask me allot of questions and 
-        they do show interest in me, because i am very deligent and ambitious. 
-        I have alot about my self that you would want to know. 
-        If you are interested click the link to read more about me.
-        <a >know more!</a>
-    </p></div>
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="" class="card-img-top" alt="">
+                <div class="card-body">
+                  <h5 class="card-title">Current Acitivity</h5>
+                  <p class="card-text">I am currently studying Data Structures and Algorithms, and preparing for an internship at a FAANG company</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="" class="card-img-top" alt="">
+                <div class="card-body">
+                  <h5 class="card-title">Passion</h5>
+                  <p class="card-text">My passion is computation, as well as, designing of softwares and being innovative</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="" class="card-img-top" alt="">
+                <div class="card-body">
+                  <h5 class="card-title">Skills</h5>
+                  <p class="card-text">I make use of Python, Java, JavaScript, React, Node, Bootstrap, Html, Css, etc </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="" class="card-img-top" alt="">
+                <div class="card-body">
+                  <h5 class="card-title">Industry Trait</h5>
+                  <p class="card-text">I like to provide solutions to problems by making use of teamwork, and positive thinking</p>
+                </div>
+              </div>
+            </div>
+          </div>
 </div>
 <div class="wave">
     <p>I am A Proud Software Developer</p>
 </div>
 <div class="project">
     <div class="p1">
-       @ Remind_me
+       @Wonworld-project
     </div>
     <div class="p1">
-        @quizerCount
+        @odin-recipes
     </div>
     <div class="p1">
-        @project3
+        @fastconnect
     </div>
     <div class="p1">
-        @project 4
+        @yourStore
     </div>
-
 </div>
 </section>
-   
+<div class="space">
+
+</div>
+<div class="connects">
+    <div class="di">
+        <h4>MyGithub</h4>
+       <a href="https://github.com/David-Jacks"> <i class="fa fa-github fa-5x" style="color: #B68D40;"></i></a>
+    </div>
+    <div class="di">
+        <h4>MyInsta</h4>
+      <a href="#">  <i class="fa fa-instagram fa-5x" style="color: #B68D40;"></i></a>
+    </div>
+    <div class="di">
+        <h4>MyLinkedIN</h4>
+       <a href="https://www.linkedin.com/in/david-jackson-976741245/"> <i class="fa fa-linkedin fa-5x" style="color: #B68D40;"></i></a>
+    </div>
+    <div class="di" >
+        <h4>MyTwitter</h4>
+      <a href="#" >  <i class="fa  fa-twitter fa-5x" style="color: #B68D40;"></i></a>
+    </div>
+</div>
+<div class="space">
+    
+</div>
 <section class="footer">
+    <div class="fo-actual">
+        <div class="ack">
+            <h4>Aknowledgement</h4>
+            <p>Bellow are some special developers who help me in the process as a <b>selfTaughtDeveloper!</b> and I want to appreciate them by sharing their handles</p>
+            <ul>
+                <li><a href="">@Kunal Kushwaha</a></li>
+                <li><a href="">@Kelvin Powell</a></li>
+                <li><a href="">@Aman Manazir</a></li>
+                <li><a href="">@Lama Dev</a></li>
+                <li><a href="">@Isaac Amfoh</a></li>
+            </ul>
+        </div>
+        <div class="reco">
+            <h4>Site Recommendation</h4>
+            <p>The sites bellow helped me to learn allot of things as a developer, you can check it out!!</p>
+            <ul>
+                <li><a href="#">TheOdinProject</a></li>
+                <li><a href="#">KhanAcedemy</a></li>
+                <li><a href="#">CodePen</a></li>
+                <li><a href="#">Codecademy</a></li>
+                <li><a href="#">LeetCode</a></li>
+                <li><a href="#">mdnWebDocs</a></li>
+            </ul>
+        </div>
+    </div>
     <div class="handles">
-        <span>@linkedin</span>
+        <div class="social">
         <span>@facebook</span>
         <span>@whatsapp</span>
-        <span>@instagram</span>
+        </div>
+        <div class="own"><i class="fa fa-copyright"></i> David Jackson</div>
     </div>
 </section>
-<div class="f1"><i class="fa-solid fa-copyright"></i> David Jackson</div>
 </body>
+
 </html>
