--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>My folio Page</title>
 </head>
 
-<body  class="container">
+<body  class="container ">
    <section class="first">
        <div class="head">
            <h1>My</h1>
@@ -84,7 +84,10 @@
           </div>
 </div>
 <div class="wave">
-    <p>I am A Proud Software Developer</p>
+    <p>I am a Proud Software Developer</br>And bellow are some of my projects</p>
+</div>
+<div class="small-space">
+
 </div>
 <div class="project">
     <div class="p1">
@@ -107,19 +110,19 @@
 <div class="connects">
     <div class="di">
         <h4>MyGithub</h4>
-       <a href="https://github.com/David-Jacks"> <i class="fa fa-github fa-5x" style="color: #B68D40;"></i></a>
+       <a href="https://github.com/David-Jacks"> <i class="fa fa-github fa-5x" style="color: #81B622;"></i></a>
     </div>
     <div class="di">
         <h4>MyInsta</h4>
-      <a href="#">  <i class="fa fa-instagram fa-5x" style="color: #B68D40;"></i></a>
+      <a href="#">  <i class="fa fa-instagram fa-5x" style="color: #81B622;"></i></a>
     </div>
     <div class="di">
         <h4>MyLinkedIN</h4>
-       <a href="https://www.linkedin.com/in/david-jackson-976741245/"> <i class="fa fa-linkedin fa-5x" style="color: #B68D40;"></i></a>
+       <a href="https://www.linkedin.com/in/david-jackson-976741245/"> <i class="fa fa-linkedin fa-5x" style="color: #81B622;"></i></a>
     </div>
     <div class="di" >
         <h4>MyTwitter</h4>
-      <a href="#" >  <i class="fa  fa-twitter fa-5x" style="color: #B68D40;"></i></a>
+      <a href="#" >  <i class="fa  fa-twitter fa-5x" style="color: #81B622;"></i></a>
     </div>
 </div>
 <div class="space">
@@ -151,13 +154,8 @@
             </ul>
         </div>
     </div>
-    <div class="handles">
-        <div class="social">
-        <span>@facebook</span>
-        <span>@whatsapp</span>
-        </div>
-        <div class="own"><i class="fa fa-copyright"></i> David Jackson</div>
-    </div>
+    
+        <div class="own"> <i class="fa fa-copyright fa-2x"></i> Developed by David Jackson</div>
 </section>
 </body>
 
