--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
     </div>
     
-        <div class="own"> <i class="fa fa-copyright fa-2x"></i> Developed by David Jackson</div>
+        <div class="own"> <i class="fa fa-copyright fa-2x"></i>2023|Developed by David Jackson</div>
 </section>
 </body>
 
