--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><b>Nationality:</b> Ghanaian</li>
                     <li><b>School:</b> Lancaster University Ghana</li>
                     <li><b>Department: </b>Computer Science</li>
-                    <li><b>Year:</b>2023</li>
+                    <li><b>Year: </b>2023</li>
                     <li><b>Email Address: </b><a href="#" >djackfaith0.5@gmail.com</a></li>
                     <li><b>Phone: </b>0557466921</li>
                 </ul>
@@ -86,7 +86,7 @@
 <div class="wave">
     <p>I am a Proud Software Developer</br>And bellow are some of my projects</p>
 </div>
-<div class="small-space">
+<div class="space">
 
 </div>
 <div class="project">
