--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mine.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap" rel="stylesheet">
+    <link href="" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>My folio Page</title>
@@ -16,20 +16,21 @@
        <div class="head">
            <h1>My</h1>
         </div>
+        <!-- 🌞🌙 -->
     </section>
            <div class="nav-bar">
                <ul >
-                   <li><a href="/pages/about.html">About</a></li>
                    <li><a href="/pages/contact.html">Contact</a></li>
                    <li><a href="/pages/lifestyle.html">lifestyle</a></li>
-                   <li><a href="/pages/Interest.html">Interest</a></li>
                    <li><a href= "/pages/blog.html"> myBlog</a></li>
+                   <li><a class="backgroundChange"href="#">Light🌞</a></li>
                 </ul>
             </div>
    <section class="second">
         <div class="pic" > 
             <img src="./img/F720E835-9973-49DF-A212-A5D8C55DA3C0.jpeg" alt="self-image">
         </div>
+        <div class="small-space"></div>
             <div class="mylist">
                 <ul>
                     <li><b>Name:</b> David Jackson</li>
@@ -108,26 +109,24 @@
 
 </div>
 <div class="connects">
-    <div class="di">
-        <h4>MyGithub</h4>
-       <a href="https://github.com/David-Jacks"> <i class="fa fa-github fa-5x" style="color: #81B622;"></i></a>
+    <div class="di">   
+      <a href="https://github.com/David-Jacks"> 
+        <i class="fa fa-github fa-4x" ></i></a>
     </div>
-    <div class="di">
-        <h4>MyInsta</h4>
-      <a href="#">  <i class="fa fa-instagram fa-5x" style="color: #81B622;"></i></a>
+    <div class="di"> 
+        <a href="#">  <i class="fa fa-instagram fa-4x" ></i></a>
     </div>
-    <div class="di">
-        <h4>MyLinkedIN</h4>
-       <a href="https://www.linkedin.com/in/david-jackson-976741245/"> <i class="fa fa-linkedin fa-5x" style="color: #81B622;"></i></a>
+    <div class="di">  
+      <a href="https://www.linkedin.com/in/david-jackson-976741245/"> <i class="fa fa-linkedin fa-4x" ></i></a>
     </div>
-    <div class="di" >
-        <h4>MyTwitter</h4>
-      <a href="#" >  <i class="fa  fa-twitter fa-5x" style="color: #81B622;"></i></a>
+    <div class="di" > 
+      <a href="#" >  <i class="fa  fa-twitter fa-4x" ></i></a>
     </div>
 </div>
 <div class="space">
     
 </div>
+<div class="small-space"></div>
 <section class="footer">
     <div class="fo-actual">
         <div class="ack">
@@ -142,7 +141,7 @@
             </ul>
         </div>
         <div class="reco">
-            <h4>Site Recommendation</h4>
+            <h4>Recommendations</h4>
             <p>The sites bellow helped me to learn allot of things as a developer, you can check it out!!</p>
             <ul>
                 <li><a href="#">TheOdinProject</a></li>
@@ -157,6 +156,7 @@
     
         <div class="own"> <i class="fa fa-copyright fa-2x"></i>2023|Developed by David Jackson</div>
 </section>
+<script src="/my.js"></script>
 </body>
 
 </html>
