--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </section>
            <div class="nav-bar">
                <ul >
-                   <li><a href="/pages/contact.html">Contact</a></li>
-                   <li><a href="/pages/lifestyle.html">lifestyle</a></li>
-                   <li><a href= "/pages/blog.html"> myBlog</a></li>
+                   <li><a href="#">Contact</a></li>
+                   <li><a href="#">lifestyle</a></li>
+                   <li><a href= "#"> myBlog</a></li>
                    <li><a class="backgroundChange"href="#">Light🌞</a></li>
                 </ul>
             </div>
@@ -93,18 +93,18 @@
 
 </div>
 <div class="project">
-    <div class="p1">
+    <a  href="#" class="p1">
        @Wonworld-project
-    </div>
-    <div class="p1">
+    </a>
+    <a  href="#" class="p1">
         @odin-recipes
-    </div>
-    <div class="p1">
+    </a>
+    <a href="#"  class="p1">
         @fastconnect
-    </div>
-    <div class="p1">
+    </a>
+    <a href="#"  class="p1">
         @yourStore
-    </div>
+    </a>
 </div>
 </section>
 <div class="space">
