--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
         <div class="socials">
           <div class="hex__wrapper">
             <div class="hex">
-              <a href="#">
+              <a href="https://github.com/David-Jacks">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
           </div>
           <div class="hex__wrapper">
             <div class="hex">
-              <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/david-jackson-976741245/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
           <div class="hex__wrapper">
@@ -147,61 +147,76 @@
             These projects showcase the culmination of my passion for software development and my commitment to creating impactful solutions
           </p>
         </div>
-        <div class="projects__show">
+        
+        <div class="projects__show" style="--pro_color: #FF8811;">
+            <div class="project__box Your_store">
+              <div class="project_card_content">
+                <div class="project__icon">
+                  <svg width="80px" height="80px"  viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <g id="Card">
+                    <path class="cls-1" d="M21,4.93h0L12.32,2.05a1,1,0,0,0-.61,0l-9,2.75A1,1,0,0,0,2,5.57,1.06,1.06,0,0,0,1.93,6V9A1.07,1.07,0,0,0,3,10.07H5V17H3a1,1,0,0,0-1,1v3a1,1,0,0,0,1,1H21a1,1,0,0,0,1-1V18a1,1,0,0,0-1-1H19V10.07h2A1.07,1.07,0,0,0,22.07,9V6A1.07,1.07,0,0,0,21,4.93ZM12,4l2.64.88H9.1Zm-5,6H8V17H7ZM13,17V10.07h1V17Zm-2,0H10V10.07h1Zm9,3H4V19H20Zm-3-3H16V10.07h1Zm2.93-9.07H4.07V7.07H19.93Z"/>    
+                    </g> 
+                  </svg>
+                </div>
+                <div class="project__text">
+                  <h3>Your Store</h3>
+                  <p>An intranet media for organization to manage interial affers, built with reactjs and express</p>
+                  <a href="">view</a>
+                </div>
+              </div>
+           </div>
 
+            <div class="project__box" style="--pro_color: #e7c324;">
+              <div class="project_card_content">
+                <div class="project__icon">
+                  <svg height="80px" width="80px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"  viewBox="0 0 380 380" xml:space="preserve">
+                    <g id="XMLID_510_">
+                      <path class="cls-1" id="XMLID_515_" d="M380,140V20h-20V0H240v20H140V0H20v20H0v120h20v100H0v120h20v20h120v-20h100v20h120v-20h20V240h-20V140
+                        H380z M340,100h-20v180h20v40h-20v20h-40v-20H100v20H60v-20H40v-40h20V100H40V60h20V40h40v20h180V40h40v20h20V100z"/>
+                      <path id="XMLID_829_" d="M100,280h180V100H100V280z M140,140h100v100H140V140z"/>
+                    </g>
+                  </svg>
+                </div>
+                <div class="project__text">
+                  <h3>Fastconnect</h3>
+                  <p>An intranet media for organization to manage interial affers, built with reactjs and express</p>
+                  <a href="">view</a>
+                </div>
+              </div>
+            </div>
+
+         <div class="project__box" style="--pro_color: #BA2D0B;">
+            <div class="project_card_content">
+              <div class="project__icon">
+                <svg height="80px" width="80px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 491.532 491.532" xml:space="preserve">
+                  <g>
+                    <g>
+                      <path class="cls-1" d="M471.05,368.643h-40.958v-52.957l55.442-55.442c7.998-7.998,7.998-20.965,0-28.963l-55.442-55.442v-52.957h40.958
+                        c11.311,0,20.48-9.169,20.48-20.48v-61.44c0-11.311-9.169-20.48-20.48-20.48H348.17c-11.311,0-20.48,9.169-20.48,20.48v61.44
+                        c0,11.311,9.169,20.48,20.48,20.48h40.962v52.957l-49.443,49.443H151.855l-49.443-49.443v-43.701l24.939,9.808
+                        c10.526,4.14,22.415-1.038,26.554-11.564l22.487-57.18c4.14-10.526-1.038-22.415-11.564-26.554L50.468,1.673
+                        c-10.526-4.14-22.415,1.038-26.554,11.564L1.426,70.417c-4.14,10.526,1.038,22.415,11.564,26.554l48.461,19.058v59.81
+                        L6.01,231.281c-7.998,7.998-7.998,20.965,0,28.963l55.442,55.442v38.219l-10.984-4.32c-10.526-4.14-22.415,1.038-26.554,11.564
+                        L1.426,418.33c-4.14,10.526,1.038,22.415,11.564,26.554l114.36,44.974c10.526,4.14,22.415-1.038,26.554-11.564l22.487-57.18
+                        c4.14-10.526-1.038-22.415-11.564-26.554l-62.417-24.546v-54.328l49.443-49.443h187.834l49.443,49.443v52.957H348.17
+                        c-11.311,0-20.48,9.169-20.48,20.48v61.44c0,11.311,9.169,20.48,20.48,20.48h122.88c11.311,0,20.48-9.169,20.48-20.48v-61.44
+                        C491.53,377.812,482.36,368.643,471.05,368.643z M368.65,61.443h81.92v20.48h-81.92V61.443z M54.536,47.287l76.242,29.983
+                        l-7.496,19.062L47.04,66.349L54.536,47.287z M123.282,444.245L47.04,414.261l7.496-19.062l76.242,29.984L123.282,444.245z
+                        M81.932,278.24l-32.477-32.477l32.477-32.477l32.477,32.477L81.932,278.24z M409.612,213.286l32.477,32.477l-32.477,32.477
+                        l-32.477-32.477L409.612,213.286z M450.57,430.083h-81.92v-20.48h81.92V430.083z"/>
+                    </g>
+                  </g>
+                </svg>
+              </div>
+              <div class="project__text">
+                <h3>Walk Through</h3>
+                <p>An intranet media for organization to manage interial affers, built with reactjs and express</p>
+                <a href="">view</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-  <!-- <div id="showroom">
-    <div class="space"></div>
-    <div class="owl-carousel">
-        <div class="card">
-          <img src="./img/photo_2022-07-16_09-13-23.jpg" class="card-img-top pro-img" alt="...">
-          <div class="card-body pro-body">
-            <p class="card-text"> build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">  @Wonworld-project</a>
-          </div>
-        </div>
-        <div class="card">
-          <img src="./img/photo_2022-07-16_09-13-23.jpg" class="card-img-top pro-img" alt="...">
-          <div class="card-body pro-body">
-            <p class="card-text"> build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">    @odin-recipes</a>
-          </div>
-        </div>
-        <div class="card">
-          <img src="./img/photo_2022-07-16_09-13-23.jpg" class="card-img-top pro-img" alt="...">
-          <div class="card-body pro-body">
-            <p class="card-text"> build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">  @fastconnect</a>
-          </div>
-        </div>
-        <div class="card">
-          <img src="./img/photo_2022-07-16_09-13-23.jpg" class="card-img-top pro-img" alt="...">
-          <div class="card-body pro-body">
-            <p class="card-text"> build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">   @yourStore</a>
-          </div>
-        </div>
-    </div>
-
-      <div class="space">
-    </div>
-    <div class="connects">
-        <div class="di">   
-          <a href="https://github.com/David-Jacks"> 
-            <i class="fa fa-github fa-4x" ></i></a>
-        </div>
-        <div class="di"> 
-            <a href="#">  <i class="fa fa-instagram fa-4x" ></i></a>
-        </div>
-        <div class="di">  
-          <a href="https://www.linkedin.com/in/david-jackson-976741245/"> <i class="fa fa-linkedin fa-4x" ></i></a>
-        </div>
-        <div class="di" > 
-          <a href="#" >  <i class="fa  fa-twitter fa-4x" ></i></a>
-        </div>
-    </div>
-  </div> -->
 
   <!-- contact form -->
   <div id="contact__page">
