--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <!-- WE ARE GOING TO USE BEM CONVENTION (BLOCK ELEMENT MODIFIER); -->
 <body>
-<div class="container">
+<div class="my-container" id="folio">
 
  <!-- navigation section -->
     <nav>
@@ -45,7 +45,7 @@
   
     </nav> 
 
-<!-- Landing Page -->
+ <!-- Landing Page -->
     <div id="landing__page">
       
       <div class="landing__text">
@@ -84,7 +84,7 @@
         </div>
       </div>
       <div class="landing__image">
-        <img src="./svg/DavidsProfile 2.svg" alt="self-image">
+        <img src="./img/DavidsProfile 1.png" alt="self-image">
       </div>
     </div>
 
@@ -160,8 +160,8 @@
                 </div>
                 <div class="project__text">
                   <h3>Your Store</h3>
-                  <p>An intranet media for organization to manage interial affers, built with reactjs and express</p>
-                  <a href="" id="btn"><span>view</span><i></i></a>
+                  <p>An Eccormerce website that gives users the opportunity to have personal stores and also a mall to but and sell products online</p>
+                  <a href="https://lancaster-store.netlify.app/" id="btn"><span>visit</span><i></i></a>
                 </div>
               </div>
            </div>
@@ -180,7 +180,7 @@
                 <div class="project__text">
                   <h3>Fastconnect</h3>
                   <p>An intranet media for organization to manage interial affers, built with reactjs and express</p>
-                  <a href="" id="btn"><span>view</span><i></i></a>
+                  <a href="https://lancasterfastconnect.netlify.app/" id="btn"><span>visit</span><i></i></a>
                 </div>
               </div>
             </div>
@@ -211,7 +211,7 @@
               <div class="project__text">
                 <h3>Walk Through</h3>
                 <p>An intranet media for organization to manage interial affers, built with reactjs and express</p>
-                <a href="" id="btn"><span>view</span><i></i></a>
+                <a href="" id="btn"><span>visit</span><i></i></a>
               </div>
             </div>
           </div>
