--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <div class="project__text">
                   <h3>Your Store</h3>
                   <p>An Eccormerce website that gives users the opportunity to have personal stores and also a mall to but and sell products online</p>
-                  <a href="https://lancaster-store.netlify.app/" id="btn"><span>visit</span><i></i></a>
+                  <a href="https://github.com/David-Jacks/yourStore.git" id="btn" target="_blank"><span>visit</span><i></i></a>
                 </div>
               </div>
            </div>
@@ -179,7 +179,7 @@
                 <div class="project__text">
                   <h3>Fastconnect</h3>
                   <p>An intranet media for organization to manage interial affers, built with reactjs and express</p>
-                  <a href="https://lancasterfastconnect.netlify.app/" id="btn"><span>visit</span><i></i></a>
+                  <a href="https://lancasterfastconnect.netlify.app/" id="btn" target="_blank"><span>visit</span><i></i></a>
                 </div>
               </div>
             </div>
@@ -208,9 +208,9 @@
                 </svg>
               </div>
               <div class="project__text">
-                <h3>Walk Through</h3>
-                <p>An intranet media for organization to manage interial affers, built with reactjs and express</p>
-                <a href="" id="btn"><span>visit</span><i></i></a>
+                <h3>Eduhub</h3>
+                <p>Eduhub provides efficient academic sollutions to students by providing the exact courses</p>
+                <a href="https://github.com/David-Jacks/Eduhub.git" id="btn" target="_blank"><span>visit</span><i></i></a>
               </div>
             </div>
           </div>
@@ -242,7 +242,7 @@
     </div>
   </div>
   <section id="footer__page">
-      <div class="copy__right"> @ 2023 Developed by <span>David Jackson</span></div>
+      <div class="copy__right"> @2023 || Developed by <span>David Jackson</span></div>
   </section>
 </div>
 <script src="/my.js"></script>
