--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
                   </g>
                 </svg>
               </div>
-              <div class="project__text">
-                <h3>Eduhub</h3>
-                <p>Eduhub provides efficient academic sollutions to students by providing the exact courses</p>
-                <a href="https://github.com/David-Jacks/Eduhub.git" id="btn" target="_blank"><span>visit</span><i></i></a>
+               <div class="project__text">
+                <h3>ScholarScribe</h3>
+                <p>Educational web application for Lancaster University Ghana Creative Society, with React, CSS and Redux</p>
+                <a href="https://github.com/David-Jacks/blog-backEnd" id="btn" target="_blank"><span>visit</span><i></i></a>
               </div>
             </div>
           </div>
