--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                <div class="project__text">
                 <h3>ScholarScribe</h3>
                 <p>Educational web application for Lancaster University Ghana Creative Society, with React, CSS and Redux</p>
-                <a href="https://github.com/David-Jacks/blog-backEnd" id="btn" target="_blank"><span>visit</span><i></i></a>
+                <a href="https://lugblog.netlify.app/" id="btn" target="_blank"><span>visit</span><i></i></a>
               </div>
             </div>
           </div>
