--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </div>
           <div class="hex__wrapper">
             <div class="hex">
-              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="https://twitter.com/faithchampwon"><i class="fa-brands fa-twitter"></i></a>
             </div>
           </div>
           <div class="hex__wrapper">
