--- a/index.html
+++ b/index.html
@@ -61,24 +61,24 @@
         <div class="socials">
           <div class="hex__wrapper">
             <div class="hex">
-              <a href="https://github.com/David-Jacks">
+              <a href="https://github.com/David-Jacks" target="_blank">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
           </div>
           <div class="hex__wrapper">
             <div class="hex">
-              <a href="https://www.linkedin.com/in/david-jackson-976741245/"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/david-jackson-976741245/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
           <div class="hex__wrapper">
             <div class="hex">
-              <a href="https://twitter.com/faithchampwon"><i class="fa-brands fa-twitter"></i></a>
+              <a href="https://twitter.com/faithchampwon" target="_blank"><i class="fa-brands fa-twitter"></i></a>
             </div>
           </div>
           <div class="hex__wrapper">
             <div class="hex">
-              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#" target="_blank"><i class="fa-brands fa-facebook"></i></a>
             </div>
           </div>
         </div>
