changed hosting platform for fastconnnect

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <div class="project__text">
                   <h3>Fastconnect</h3>
                   <p>An intranet media for organization to manage interial affers, built with reactjs and express</p>
-                  <a href="https://lancasterfastconnect.netlify.app/" id="btn" target="_blank"><span>visit</span><i></i></a>
+                  <a href="https://fastconnect-897e0.firebaseapp.com/" id="btn" target="_blank"><span>visit</span><i></i></a>
                 </div>
               </div>
             </div>
