--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
                   </svg>
                 </div>
                 <div class="project__text">
-                  <h3>Your Store</h3>
-                  <p>An Eccormerce website that gives users the opportunity to have personal stores and also a mall to but and sell products online</p>
-                  <a href="https://github.com/David-Jacks/yourStore.git" id="btn" target="_blank"><span>visit</span><i></i></a>
+                  <h3>Club Online</h3>
+                  <p>A club management system to help manage member details and attendance</p>
+                  <a href="https://christianclubonline.netlify.app/" id="btn" target="_blank"><span>visit</span><i></i></a>
                 </div>
               </div>
            </div>
@@ -210,7 +210,7 @@
                <div class="project__text">
                 <h3>ScholarScribe</h3>
                 <p>Educational web application for Lancaster University Ghana Creative Society, with React, CSS and Redux</p>
-                <a href="https://lugblog.netlify.app/" id="btn" target="_blank"><span>visit</span><i></i></a>
+                <a href="https://master--schorlarscribe.netlify.app/" id="btn" target="_blank"><span>visit</span><i></i></a>
               </div>
             </div>
           </div>
