--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             My journey in the world of programming has been fueled by 
             the desire to create innovative solutions that make a meaningful impact. 
           </p>
-          <a href="https://docs.google.com/document/d/1JL5OfvSEhKgqvTTV_p75TKvf38GQdNMqgBDjdgZ49ZY/edit#heading=h.j827qwtrydby" id="btn" target="_blank"><span>Resume</span><i></i></a>
+          <a href="https://docs.google.com/document/d/1c6BNZxKKlzASDLzFV6KAmNdHYbCDNMUvOOUIKX0d28o/edit?usp=sharing" id="btn" target="_blank"><span>Resume</span><i></i></a>
         </div>
         <div class="socials">
           <div class="hex__wrapper">
