fixed dates and btn toggling issues

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href= "#" target="_blank"> MyBlog</a></li> 
           </ul>
           <div class="bg__change">
-            <input type="checkbox" class="checkbox">
+            <input type="checkbox" id="checkbox" class="checkbox">
             <label for="checkbox" class="checkbox__label">
               <i class="fa-solid fa-sun"></i>
               <i class="fa-solid fa-moon"></i>
@@ -241,9 +241,9 @@
       </div>  
     </div>
   </div>
-  <section id="footer__page">
-      <div class="copy__right"> @2023 || Developed by <span>David Jackson</span></div>
-  </section>
+    <section id="footer__page">
+      <div class="copy__right"> @<span id="current-year"></span> || Developed by <span>David Jackson</span></div>
+    </section>
 </div>
 <script src="/my.js"></script>
 </body>
